# plainsight

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.claude/: launch.json
.claude/skills/: README.md
.github/workflows/: ci.yml  infra.yml  quant.yml  style.yml
apps/api/: package.json  tsconfig.json  vitest.config.ts
apps/web/: README.md  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: 2026-07-19-fable5-review.md  runbook.md  style.md
docs/adr/: 0001-single-account-single-environment.md  0002-zero-vpc.md  0003-ssm-securestrings-over-secrets-manager.md  0004-the-not-list.md  0005-python-for-the-quant-engine.md  README.md  template.md
docs/plan/: 2026-07-13-dashboard-design.md  2026-07-18-hedge-fund-gap.md  plainsight-cdk.md  (+8 more)
infra/: .gitignore  README.md  cdk.json  package.json  tsconfig.json  vitest.config.ts
plan/: buffet-app-cdk.md  buffet-app-frontend.md  buffet-app.md  buffett-app-cdk.md  buffett-app-frontend.md  buffett-app.md  plainsight-cdk.md  plainsight-frontend.md  plainsight.md
quant/pairs-engine/: .gitignore  README.md  pyproject.toml
quant/pairs-engine/src/pairs_engine/: __init__.py  artefacts.py  backtest.py  cli.py  data.py  golden.py  publish.py  research.py  signals.py  synthetic.py  universe.py  windows.py
quant/pairs-engine/tests/: conftest.py  test_artefacts.py  test_backtest.py  test_data.py  test_golden.py  test_publish.py  test_research.py  test_scan.py  test_windows.py
scripts/: check-bundle.mjs  check-style.mjs
(+317 files in other folders)
